# umaku-umich.github.io

./: .gitignore
docs/: README.md  insta485run  lanvalrun  pyproject.toml  requirements.txt
docs/epistolarylanval/: index.html
docs/epistolarylanval/email01/: index.html
docs/epistolarylanval/email02/: index.html
docs/epistolarylanval/email03/: index.html
docs/epistolarylanval/email04/: index.html
docs/epistolarylanval/exampletext/: index.html
docs/epistolarylanval/slack01/: index.html
docs/epistolarylanval/slack02/: index.html
docs/epistolarylanval/templates/: email.html  index.html  text.html
docs/epistolarylanval/text01/: index.html
docs/epistolarylanval/text02/: index.html
docs/epistolarylanval/text03/: index.html
docs/epistolarylanval/text04/: index.html
docs/epistolarylanval/text05/: index.html
docs/epistolarylanval/text06/: index.html
docs/epistolarylanval/text07/: index.html
docs/epistolarylanval/text08/: index.html
docs/epistolarylanval/text11/: index.html
docs/epistolarylanval/text12/: index.html
docs/epistolarylanval/videotranscript/: index.html
docs/epistolarylanvaltemplates/: config.json  index.html
docs/insta485-old/templates/: explore.html  (+5 more)
docs/insta485_html-old/: index.html
docs/insta485generator/: __main__.py
docs/insta485generator.egg-info/: PKG-INFO  SOURCES.txt
docs/textformatexample/: index.html  pyfile.py  style.css
docs/thelanvalcasefiles/: index.html
docs/websitegenerator/: __main__.py
docs/websitegenerator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
(+49 files in other folders)
