[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "websitegenerator"
version = "1.0.0"
dependencies = [
    "bs4",
    "click",
    "html5validator",
    "jinja2",
    "pycodestyle",
    "pydocstyle",
    "pylint",
    "pytest",
    "requests",
    "pdbp"
]
requires-python = ">=3.12"

[project.scripts]
websitegenerator = "websitegenerator.__main__:main"

[tool.setuptools]
packages = ["websitegenerator"]

[tool.pylint.typecheck]
# List of decorators that change the signature of a decorated function.
# We need this because Click decorators mutate the main() function.
signature-mutators = ["command", "option", "argument"]
